frontend/src/assets/stylesheets/spot_detail.css
@import 'variables.css';

.spot-index-item-detail-wrapper {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  width: 80%;
}

.spot-index-item-detail-wrapper .spot-index-item-detail-photos {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  width: 100%;
  height: 100%;
  margin-top: 25px;
}

.spot-index-item-detail-wrapper .spot-index-item-detail-photos .main-photo-wrapper {
  width: 50%;
  height: 100%;
  margin-right: 1%;
  overflow: hidden;
}

.spot-index-item-detail-wrapper .spot-index-item-detail-photos .main-photo-wrapper img {
  max-width: 100%;
  width: auto;
}

.spot-index-item-detail-wrapper .spot-index-item-detail-photos .main-photo-wrapper img:hover {
  transform: scale(1.10);
  transition: transform 1s;
  cursor: pointer;
}

.spot-index-item-detail-wrapper .spot-index-item-detail-photos .thumbnail-photos-wrapper {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: space-between;
  width: 50%;
  height: 100%
}

.spot-index-item-detail-wrapper .spot-index-item-detail-photos .thumbnail-photos-wrapper .image-wrapper {
  width: 49%;
  height: 48%;
  overflow: hidden;
}

.spot-index-item-detail-wrapper .spot-index-item-detail-photos .thumbnail-photos-wrapper .image-wrapper img {
  width: 100%;
  height: 100%;
}

.spot-index-item-detail-wrapper .spot-index-item-detail-photos .thumbnail-photos-wrapper .image-wrapper img:hover {
  transform: scale(1.10);
  transition: transform 1s;
  cursor: pointer;
}

.spot-index-item-detail-wrapper .spot-index-item-detail-header {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  margin-top: 15px;
  width: 55%;
}

.spot-index-item-detail-wrapper .spot-index-item-detail-header .name-wrapper h1 {
  font-family: 'cerealMedium';
  font-size: 32px;
  letter-spacing: 0.5px;
  color: var(--medium-gray); 
  width: 70%;
}

.spot-index-item-detail-wrapper .spot-index-item-detail-header .profile-image-wrapper img {
  width: 62px;
  border-radius: 50%;
  margin-left: -60px;
}

.spot-index-item-detail-wrapper .spot-index-item-detail-location-wrapper p {
  font-family: 'cerealLight';
  font-size: 15px;
  color: var(--medium-gray);
  margin-top: 10px;
}

.spot-index-item-detail-wrapper .spot-index-item-detail-location-wrapper .underline-wrapper {
  border-top: 1px solid var(--gray);
}

.spot-index-item-detail-wrapper .spot-index-item-detail-description .main-description-wrapper {
  display: flex;
  flex-direction: row;
  width: 100%;
}

.spot-index-item-detail-wrapper .spot-index-item-detail-description .main-description-wrapper .description-wrapper {
  width: 55%;
  margin-right: 100px;
}

.spot-index-item-detail-wrapper .spot-index-item-detail-description .main-description-wrapper .description-wrapper .header-details-wrapper {
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  width: 100%;
  border-bottom: 1px solid var(--underline-gray);
}

.spot-index-item-detail-wrapper .spot-index-item-detail-description .main-description-wrapper .description-wrapper .header-details-wrapper p {
  font-family: 'cerealLight';
  font-size: 16px;
  color: var(--dark-gray);
  margin: 20px 25px 0 0;
  padding-bottom: 20px;
}

.spot-index-item-detail-wrapper .spot-index-item-detail-description .main-description-wrapper .spot-index-item-detail-description-perks {
  border-bottom: 1px solid var(--underline-gray);
  margin-top: 30px;
}

.spot-index-item-detail-wrapper .spot-index-item-detail-description .main-description-wrapper .spot-index-item-detail-description-perks .entire-home-perk-wrapper {
  display: flex;
  flex-direction: row;
  align-items: flex-start;
}

.spot-index-item-detail-wrapper .spot-index-item-detail-description .main-description-wrapper .spot-index-item-detail-description-perks .entire-home-perk-wrapper .image-wrapper .star-icon img {
  width: 23px;
  margin-right: 17px;
}

.spot-index-item-detail-wrapper .spot-index-item-detail-description .main-description-wrapper .spot-index-item-detail-description-perks .entire-home-perk-wrapper .perk-wrapper h3 {
  font-family: 'cerealRegular';
  font-size: 16px;
  color: var(--medium-gray);
}

.spot-index-item-detail-wrapper .spot-index-item-detail-description .main-description-wrapper .spot-index-item-detail-description-perks .entire-home-perk-wrapper .perk-wrapper p {
  font-family: 'cerealLight';
  font-size: 14px;
  color: var(--gray);
  margin-top: 5px;
}

.spot-index-item-detail-wrapper .spot-index-item-detail-description .main-description-wrapper .spot-index-item-detail-description-perks .sparkling-clean-perk-wrapper {
  display: flex;
  flex-direction: row;
  align-items: flex-start;
  margin-top: 20px;
}

.spot-index-item-detail-wrapper .spot-index-item-detail-description .main-description-wrapper .spot-index-item-detail-description-perks .sparkling-clean-perk-wrapper .image-wrapper .cleaner-icon img {
  width: 15px;
  margin-right: 25px;
}

.spot-index-item-detail-wrapper .spot-index-item-detail-description .main-description-wrapper .spot-index-item-detail-description-perks .sparkling-clean-perk-wrapper .perk-wrapper h3 {
  font-family: 'cerealRegular';
  font-size: 16px;
  color: var(--medium-gray);
}

.spot-index-item-detail-wrapper .spot-index-item-detail-description .main-description-wrapper .spot-index-item-detail-description-perks .sparkling-clean-perk-wrapper .perk-wrapper p {
  font-family: 'cerealLight';
  font-size: 14px;
  color: var(--gray);
  margin-top: 5px;
}

.spot-index-item-detail-wrapper .spot-index-item-detail-description .main-description-wrapper .spot-index-item-detail-description-perks .superhost-perk-wrapper {
  display: flex;
  flex-direction: row;
  align-items: flex-start;
  margin-top: 20px;
}

.spot-index-item-detail-wrapper .spot-index-item-detail-description .main-description-wrapper .spot-index-item-detail-description-perks .superhost-perk-wrapper .image-wrapper .badge-icon img {
  width: 16px;
  margin-right: 24px;
}
/* ... */

